@@ -1,3 +1,7 @@
+2004-05-24  ujwal
+
+	* Added support for services.
+
 2004-05-19  ujwal
 
 	* Made horizontal spacing parameter an "int" instead of a "float" since 
